--- a/temperature-control/src/App.css
+++ b/temperature-control/src/App.css
@@ -2,37 +2,81 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  font-size: 36px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px;
+}
+
+.main-box {
+  padding: 20px 40px;
+  background-color: grey;
+  border-radius: 22px;
+}
+
+.temperature {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  border: 4px solid white;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.3s ease-out;
+}
+
+.bg-warm {
+  background-color: orange;
+}
+
+.bg-cold {
+  background-color: rgb(0, 102, 255);
+}
+
+.figure {
+  margin: 0;
+  font-size: 30px;
+  color: white;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
+}
+
+.button {
+  background-color: rgb(25, 122, 225);
+  color: white;
+  border: 3px solid white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  font-size: 28px;
+  transition: background 0.3s ease-out;
+}
+
+.button:hover {
+  background-color: rgb(9, 75, 147);
+}
+
+@media screen and (max-width: 650px) {
+  .heading {
+    font-size: 25px;
   }
 }
